--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,9 @@ edition = "2024"
 
 [dependencies]
 bevy = { version = "0.17.3" }
+bevy_winit = "0.17.3"
+image = "0.25.9"
+winit = "0.30.12"
 
 [profile.dev]
 opt-level = 1
