--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,8 @@ bevy_console = "0.16.0"
 bevy_winit = "0.17.3"
 clap = "4.5.54"
 image = "0.25.9"
+noise = "0.9.0"
+rand = "0.9.2"
 winit = "0.30.12"
 
 [profile.dev]
