--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+avian2d = "0.4.1"
 bevy = { version = "0.17.3" }
 bevy_console = "0.16.0"
 bevy_winit = "0.17.3"
