--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,9 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-avian2d = "0.4.1"
 bevy = { version = "0.17.3" }
 bevy_console = "0.16.0"
+bevy_rapier2d = "0.32.0"
 bevy_winit = "0.17.3"
 clap = "4.5.54"
 image = "0.25.9"
