--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 
 [dependencies]
 bevy = { version = "0.17.3" }
+bevy_asset_loader = "0.24.0"
 bevy_console = "0.16.0"
 bevy_rapier2d = "0.32.0"
 bevy_winit = "0.17.3"
