--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ bevy_console = "0.16.0"
 bevy_firefly = "0.17.0"
 bevy_rapier2d = "0.32.0"
 bevy_winit = "0.17.3"
-clap = "4.5.54"
+clap = { version = "4.5.54", features = ["derive"] }
 image = "0.25.9"
 noise = "0.9.0"
 rand = "0.9.2"
