--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,9 @@ name = "sauw"
 version = "0.1.0"
 edition = "2024"
 
+[build-dependencies]
+embed-resource = "1.6.3"
+
 [dependencies]
 bevy = { version = "0.17.3" }
 bevy_asset_loader = "0.24.0"
