--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,3 +24,12 @@ opt-level = 1
 
 [profile.dev.package."*"]
 opt-level = 3
+
+[profile.release]
+opt-level = "z"
+lto = "thin"
+codegen-units = 1
+panic = "abort"
+strip = true
+debug = false
+incremental = false
