--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ crate-type = ["lib", "cdylib"]
 embed-resource = "1.6.3"
 
 [dependencies]
-bevy = { version = "0.17.3" }
+bevy = { version = "0.17.3", features = ["bevy_dev_tools"] }
 bevy_asset_loader = "0.24.0"
 bevy_console = "0.16.0"
 bevy_firefly = "0.17.0"
