--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,10 @@ edition = "2024"
 name = "sauw"
 crate-type = ["lib", "cdylib"]
 
+[[bin]]
+name = "sauw"
+path = "src/main.rs"
+
 [build-dependencies]
 embed-resource = "1.6.3"
 
@@ -22,6 +26,7 @@ image = "0.25.9"
 noise = "0.9.0"
 rand = "0.9.2"
 winit = "0.30.12"
+blake3 = { version = "1.5", features = [ "pure" ] }
 
 [profile.dev]
 opt-level = 1
